# CS3203_SPA

./: README.md
Team00/Code00/src/spa/: CMakeLists.txt
Team00/Code00/src/spa/src/: DesignExtractor.cpp  DesignExtractor.h  Parser.cpp
Team00/Code00/src/spa/src/AST/: ASTNode.cpp  ASTNode.h  AssignNode.cpp  AssignNode.h  IfNode.cpp  IfNode.h  NumberNode.cpp  NumberNode.h  ProcedureNode.cpp  ProcedureNode.h  ProgramNode.cpp  ProgramNode.h  StmtLstNode.h  VariableNode.cpp  VariableNode.h
Team00/Code00/src/spa/src/parser/: LexicalAnalyser.cpp  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h
Team00/Code00/src/spa/src/pkb/: DataModifier.cpp  DataModifier.h  DataRetriever.cpp  DataRetriever.h  EntityManager.cpp  EntityManager.h  Table.cpp  Table.h
Team00/Code00/src/spa/src/query_builder/: Exceptions.h  QueryBuilder.cpp  QueryBuilder.h  QueryParser.cpp  QueryParser.h  QueryTokenizer.cpp  QueryTokenizer.h  QueryValidator.cpp  QueryValidator.h  exceptions.h  query_builder.cpp  query_builder.h  query_tokenizer.cpp  query_tokenizer.h
Team00/Code00/src/spa/src/query_evaluator/: DataPreprocessor.cpp  DataPreprocessor.h  DummyDataRetriever.cpp  DummyDataRetriever.h  QueryEvaluator.cpp  QueryEvaluator.h  QueryResult.cpp  QueryResult.h  QueryResultFormatter.cpp  QueryResultFormatter.h  TableCombiner.cpp  TableCombiner.h
Team00/Code00/src/unit_testing/: CMakeLists.txt
Team00/Code00/src/unit_testing/src/design_extractor/: TestVariableExtractor.cpp
Team00/Code00/src/unit_testing/src/parser/: TestParser.cpp  TestTokenizer.cpp
Team00/Code00/src/unit_testing/src/pkb/: TestDataRetriever.cpp  TestEntityManager.cpp  TestTable.cpp
Team00/Code00/src/unit_testing/src/query_builder/: TestQueryParser.cpp  TestQueryTokenizer.cpp  TestQueryValidator.cpp
Team00/Code00/src/unit_testing/src/query_evaluator/: DummyDataRetriever.cpp  TableComparator.cpp  TableComparator.h  TestQueryEvaluator.cpp  TestQueryResultFormatter.cpp  TestTableCombiner.cpp
Team41/Code41/src/integration_testing/: CMakeLists.txt
Team41/Code41/src/integration_testing/src/: TestFrontEnd.cpp
Team41/Code41/src/integration_testing/src/de-pkb-qe/: test1.cpp
Team41/Code41/src/integration_testing/src/qps/: TestQueryParserIntegration.cpp
Team41/Code41/src/integration_testing/src/sp/: DEUtils.cpp  DEUtils.h  TestAffectsIntegration.cpp  TestCallsIntegration.cpp  TestConditionalPatternIntegration.cpp  TestFollowsIntegration.cpp  TestModifiesIntegration.cpp  TestParentIntegration.cpp  TestParserAndFollowsExtraction.cpp  TestParserAndModifiesSExtraction.cpp  TestParserAndParentExtraction.cpp  TestParserAndUsesSExtraction.cpp  TestSPIntegration.cpp  TestUsesIntegration.cpp
Team41/Code41/src/integration_testing/src/sp-de/: TestSP-DEIntegration.cpp
Team41/Code41/src/spa/: CMakeLists.txt
Team41/Code41/src/spa/src/: DesignExtractor.cpp  DesignExtractor.h
Team41/Code41/src/spa/src/AST/: ASTNode.cpp  ASTNode.h  AssignNode.cpp  AssignNode.h  CallNode.cpp  CallNode.h  CondExprNode.cpp  CondExprNode.h  ExprNode.cpp  ExprNode.h  ExpressionNode.cpp  ExpressionNode.h  FactorNode.cpp  FactorNode.h  IfNode.cpp  IfNode.h  NumberNode.cpp  NumberNode.h  PrintNode.cpp  PrintNode.h  ProcedureNode.cpp  ProcedureNode.h  ProgramNode.cpp  ProgramNode.h  ReadNode.cpp  ReadNode.h  RelExprNode.cpp  RelExprNode.h  StatementListNode.cpp  StatementListNode.h  StmtLstNode.cpp  StmtNode.h  TermNode.cpp  TermNode.h  VariableNode.cpp  VariableNode.h  WhileNode.cpp  WhileNode.h
Team41/Code41/src/spa/src/CFG/: CFG.cpp  CFG.h
Team41/Code41/src/spa/src/cache_manager/: CacheContentLoader.cpp  CacheContentLoader.h  CacheManager.cpp  CacheManager.h
Team41/Code41/src/spa/src/design_extractor/: AbstractDesignExtractor.cpp  AbstractDesignExtractor.h  AffectsExtractor.cpp  AffectsExtractor.h  CallsExtractor.cpp  CallsExtractor.h  DesignExtractor.cpp  DesignExtractor.h  DesignExtractorManager.cpp  DesignExtractorManager.h  DesignExtractorRetriever.cpp  DesignExtractorRetriever.h  EntityExtractor.cpp  EntityExtractor.h  FollowsExtractor.cpp  FollowsExtractor.h  ModifiesExtractor.cpp  ModifiesExtractor.h  NextExtractor.cpp  NextExtractor.h  ParentExtractor.cpp  ParentExtractor.h  PatternExtractor.cpp  PatternExtractor.h  QueryTimeDesignExtractor.cpp  QueryTimeDesignExtractor.h  RelationExtractor.cpp  RelationExtractor.h  UsesExtractor.cpp  UsesExtractor.h
Team41/Code41/src/spa/src/parser/: ASTBuilder.cpp  ASTBuilder.h  ASTValidator.cpp  ASTValidator.h  CondExprParser.cpp  CondExprParser.h  Exceptions.h  ExprNodeParser.cpp  ExprNodeParser.h  LexicalAnalyser.h  Parser.cpp  Parser.h  ParserConstants.cpp  ParserConstants.h  SPExceptions.h  Tokenizer.cpp  Tokenizer.h
Team41/Code41/src/spa/src/pkb/: DataModifier.cpp  DataModifier.h  DataRetriever.cpp  DataRetriever.h  EntityManager.cpp  EntityManager.h  PKBStorage.cpp  PKBStorage.h  PatternManager.cpp  PatternManager.h  RelationshipManager.cpp  RelationshipManager.h  Table.cpp  Table.h
Team41/Code41/src/spa/src/query_builder/: QueryBuilder.cpp  QueryBuilder.h  QueryParser.cpp  QueryParser.h  QueryTokenizer.cpp  QueryTokenizer.h  QueryValidator.cpp  QueryValidator.h
Team41/Code41/src/spa/src/query_evaluator/: AbstractClauseVisitor.cpp  AbstractClauseVisitor.h  ClauseEvaluator.cpp  ClauseEvaluator.h  ClauseVisitor.cpp  ClauseVisitor.h  ConcreteClauseVisitor.cpp  ConcreteClauseVisitor.h  DataPreprocessor.cpp  DataPreprocessor.h  FakeDataRetriever.cpp  FakeDataRetriever.h  IVisitor.cpp  IVisitor.h  QEUtils.cpp  QEUtils.h  QueryBooleanResult.cpp  QueryBooleanResult.h  QueryEvaluator.cpp  QueryEvaluator.h  QueryOptimizer.cpp  QueryOptimizer.h  QueryResult.cpp  QueryResult.h  QueryResultFormatter.cpp  QueryResultFormatter.h  QueryTupleResult.cpp  QueryTupleResult.h  TableCombiner.cpp  TableCombiner.h  Utils.cpp  Utils.h
Team41/Code41/src/spa/src/spa_manager/: SPAManager.cpp  SPAManager.h
Team41/Code41/src/spa/src/utils/: ErrorMessageFormatter.cpp  ErrorMessageFormatter.h  ExprNodeParser.cpp  ExprNodeParser.h  (+2 more)
Team41/Code41/src/unit_testing/: CMakeLists.txt
Team41/Code41/src/unit_testing/src/: TestAST.cpp
(+639 files in other folders)
