file(GLOB srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp")
add_library(spa ${srcs} ${headers}
        src/query_builder/QueryBuilder.h
        src/query_builder/QueryBuilder.cpp
        src/query_builder/QueryTokenizer.h
        src/query_builder/QueryTokenizer.cpp
        src/query_builder/exceptions/Exceptions.h
        src/query_builder/commons/Query.h
        src/query_builder/commons/Query.cpp
        src/query_builder/commons/DesignEntity.h
        src/query_builder/commons/DesignEntity.cpp
        src/query_builder/commons/Synonym.h
        src/query_builder/commons/Synonym.cpp
        src/query_builder/QueryParser.h
        src/query_builder/QueryParser.cpp
        src/query_builder/commons/Declaration.h
        src/query_builder/clauses/SelectClause.h
        src/query_builder/clauses/SelectClause.cpp
        src/query_builder/clauses/SuchThatClause.h
        src/query_builder/commons/Ref.h
        src/query_builder/commons/Underscore.h
        src/query_builder/commons/RelationType.h
        src/query_builder/commons/RelationType.cpp
        src/query_builder/clauses/SuchThatClause.cpp
        src/query_builder/commons/Ref.cpp
        src/query_builder/QueryValidator.h
        src/query_builder/QueryValidator.cpp
        src/query_builder/commons/Declaration.cpp
        src/pkb/DataModifier.cpp
        src/pkb/DataModifier.h
        src/pkb/DataRetriever.cpp
        src/pkb/DataRetriever.h
        src/pkb/table/Table.cpp
        src/pkb/table/Table.h
        src/query_evaluator/QueryEvaluator.cpp
        src/query_evaluator/QueryEvaluator.h
        src/query_evaluator/QueryResult.cpp
        src/query_evaluator/QueryResult.h
        src/query_evaluator/QueryResultFormatter.cpp
        src/query_evaluator/QueryResultFormatter.h
        src/parser/Tokenizer.cpp
        src/parser/Tokenizer.h
        src/ast/ProcedureNode.cpp
        src/ast/ProcedureNode.h
        src/parser/Parser.cpp
        src/parser/Parser.h
        src/design_extractor/DesignExtractor.cpp
        src/design_extractor/DesignExtractor.h
        src/query_builder/commons/Ident.h
        src/query_builder/commons/Ident.cpp
        src/query_evaluator/DataPreprocessor.cpp
        src/query_evaluator/DataPreprocessor.h
        src/query_evaluator/TableCombiner.cpp
        src/query_evaluator/TableCombiner.h
        src/pkb/table/EntityTable.cpp
        src/pkb/table/EntityTable.h
        src/pkb/table/VariableTable.cpp
        src/pkb/table/VariableTable.h
        src/pkb/table/ProcedureTable.cpp
        src/pkb/table/ProcedureTable.h
        src/pkb/table/StatementTable.cpp
        src/pkb/table/StatementTable.h
        src/pkb/table/ConstantTable.cpp
        src/pkb/table/ConstantTable.h
        src/pkb/table/RelationTable.cpp
        src/pkb/table/RelationTable.h
        src/pkb/table/FollowsTable.cpp
        src/pkb/table/FollowsTable.h
        src/pkb/table/ParentTable.cpp
        src/pkb/table/ParentTable.h
        src/pkb/table/ModifiesTable.cpp
        src/pkb/table/ModifiesTable.h
        src/pkb/table/UsesTable.cpp
        src/pkb/table/UsesTable.h
        src/AST/ReadNode.cpp
        src/AST/ReadNode.h
        src/AST/PrintNode.cpp
        src/AST/PrintNode.h
        src/parser/SPExceptions.h
        src/AST/WhileNode.cpp
        src/AST/WhileNode.h
        src/AST/CallNode.cpp
        src/AST/CallNode.h
        src/AST/CondExprNode.cpp
        src/AST/CondExprNode.h
        src/AST/IfNode.cpp
        src/AST/IfNode.h
        src/AST/ExprNode.cpp
        src/AST/ExprNode.h
        src/AST/ASTNode.h
        src/AST/VariableNode.cpp
        src/AST/VariableNode.h
        src/AST/ProgramNode.cpp
        src/AST/ProgramNode.h
        src/AST/AssignNode.cpp
        src/AST/AssignNode.h
        src/AST/ProcedureNode.cpp
        src/AST/ProcedureNode.h
        src/AST/StmtNode.h
        src/AST/utils/ASTUtils.cpp
        src/AST/utils/ASTUtils.h
        src/design_extractor/EntityExtractor.cpp
        src/design_extractor/EntityExtractor.h
        src/pkb/exception/KeyNotFoundException.cpp
        src/pkb/exception/KeyNotFoundException.h
        src/AST/StmtNode.h
        src/AST/utils/ASTUtils.cpp
        src/AST/utils/ASTUtils.h
        src/parser/ASTBuilder.cpp
        src/parser/ASTBuilder.h
        src/utils/Utils.cpp
        src/utils/Utils.h
        src/design_extractor/RelationExtractor.cpp
        src/design_extractor/RelationExtractor.h
        src/utils/ExprNodeParser.cpp
        src/utils/ExprNodeParser.h
        src/design_extractor/FollowsExtractor.cpp
        src/design_extractor/FollowsExtractor.h
        src/design_extractor/ParentExtractor.cpp
        src/design_extractor/ParentExtractor.h
        src/design_extractor/ModifiesExtractor.cpp
        src/design_extractor/ModifiesExtractor.h
        src/design_extractor/UsesExtractor.cpp
        src/design_extractor/UsesExtractor.h
        src/AST/RelExprNode.cpp
        src/AST/RelExprNode.h
        src/parser/CondExprParser.cpp
        src/parser/CondExprParser.h
        src/query_evaluator/QEUtils.cpp
        src/query_evaluator/QEUtils.h
        src/utils/ExprNodeParser.h
        src/AST/RelExprNode.cpp
        src/AST/RelExprNode.h
        src/utils/ExprNodeParser.h
        src/AST/RelExprNode.cpp
        src/AST/RelExprNode.h
        src/parser/CondExprParser.cpp
        src/parser/CondExprParser.h src/design_extractor/PatternExtractor.cpp 
        src/design_extractor/PatternExtractor.h
        src/parser/CondExprParser.h src/query_builder/clauses/PatternClause.cpp 
        src/query_builder/clauses/PatternClause.h 
        src/query_builder/commons/ExpressionSpec.cpp 
        src/query_builder/commons/ExpressionSpec.h
        src/query_builder/commons/ExpressionSpecType.h
        src/pkb/table/PatternTable.cpp
        src/pkb/table/PatternTable.h
        src/query_builder/commons/ExpressionSpecType.h
        src/query_builder/commons/ExprStringTokenizer.cpp
        src/query_builder/commons/ExprStringTokenizer.h
        src/spa_manager/SPAManager.cpp
        src/spa_manager/SPAManager.h
        src/pkb/PKBStorage.cpp
        src/pkb/PKBStorage.h
        src/pkb/table/CallsTable.cpp
        src/pkb/table/CallsTable.h
        src/pkb/table/NextTable.cpp
        src/pkb/table/NextTable.h
        src/pkb/table/AffectsTable.cpp
        src/pkb/table/AffectsTable.h
        src/pkb/PKBStorage.h
        src/query_builder/commons/AttrRef.cpp
        src/query_builder/commons/AttrRef.h
        src/query_builder/clauses/WithClauses.cpp
        src/query_builder/clauses/WithClauses.h
        src/query_evaluator/QueryBooleanResult.cpp
        src/query_evaluator/QueryBooleanResult.h
        src/query_evaluator/QueryTupleResult.cpp
        src/query_evaluator/QueryTupleResult.h
        src/query_builder/commons/WithRef.cpp
        src/query_builder/commons/WithRef.h)





# this makes the headers accessible for other projects which uses spa lib
target_include_directories(spa PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)


