file(GLOB srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
file(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp")
add_library(spa ${srcs} ${headers}
        src/query_builder/QueryBuilder.h
        src/query_builder/QueryBuilder.cpp
        src/query_builder/QueryTokenizer.h
        src/query_builder/QueryTokenizer.cpp
        src/query_builder/exceptions/Exceptions.h
        src/query_builder/commons/Query.h
        src/query_builder/commons/Query.cpp
        src/query_builder/commons/DesignEntity.h
        src/query_builder/commons/DesignEntity.cpp
        src/query_builder/commons/Synonym.h
        src/query_builder/commons/Synonym.cpp
        src/query_builder/QueryParser.h
        src/query_builder/QueryParser.cpp
        src/query_builder/commons/Declaration.h
        src/query_builder/clauses/select_clauses/SelectClause.h
        src/query_builder/clauses/select_clauses/SelectClause.cpp
        src/query_builder/clauses/such_that_clauses/SuchThatClause.h
        src/query_builder/commons/Ref.h
        src/query_builder/commons/Underscore.h
        src/query_builder/commons/RelationType.h
        src/query_builder/commons/RelationType.cpp
        src/query_builder/clauses/such_that_clauses/SuchThatClause.cpp
        src/query_builder/commons/Ref.cpp
        src/query_builder/QueryValidator.h
        src/query_builder/QueryValidator.cpp
        src/query_builder/commons/Declaration.cpp
        src/pkb/DataModifier.cpp
        src/pkb/DataModifier.h
        src/pkb/DataRetriever.cpp
        src/pkb/DataRetriever.h
        src/pkb/table/Table.cpp
        src/pkb/table/Table.h
        src/query_evaluator/QueryEvaluator.cpp
        src/query_evaluator/QueryEvaluator.h
        src/query_evaluator/QueryResult.cpp
        src/query_evaluator/QueryResult.h
        src/query_evaluator/QueryResultFormatter.cpp
        src/query_evaluator/QueryResultFormatter.h
        src/parser/Tokenizer.cpp
        src/parser/Tokenizer.h
        src/ast/ProcedureNode.cpp
        src/ast/ProcedureNode.h
        src/parser/Parser.cpp
        src/parser/Parser.h
        src/design_extractor/DesignExtractor.cpp
        src/design_extractor/DesignExtractor.h
        src/query_builder/commons/Ident.h
        src/query_builder/commons/Ident.cpp
        src/query_evaluator/DataPreprocessor.cpp
        src/query_evaluator/DataPreprocessor.h
        src/query_evaluator/TableCombiner.cpp
        src/query_evaluator/TableCombiner.h
        src/pkb/table/EntityTable.cpp
        src/pkb/table/EntityTable.h
        src/pkb/table/VariableTable.cpp
        src/pkb/table/VariableTable.h
        src/pkb/table/ProcedureTable.cpp
        src/pkb/table/ProcedureTable.h
        src/pkb/table/StatementTable.cpp
        src/pkb/table/StatementTable.h
        src/pkb/table/ConstantTable.cpp
        src/pkb/table/ConstantTable.h
        src/pkb/table/RelationTable.cpp
        src/pkb/table/RelationTable.h
        src/pkb/table/FollowsTable.cpp
        src/pkb/table/FollowsTable.h
        src/pkb/table/ParentTable.cpp
        src/pkb/table/ParentTable.h
        src/pkb/table/ModifiesTable.cpp
        src/pkb/table/ModifiesTable.h
        src/pkb/table/UsesTable.cpp
        src/pkb/table/UsesTable.h
        src/AST/ReadNode.cpp
        src/AST/ReadNode.h
        src/AST/PrintNode.cpp
        src/AST/PrintNode.h
        src/parser/SPExceptions.h
        src/AST/WhileNode.cpp
        src/AST/WhileNode.h
        src/AST/CallNode.cpp
        src/AST/CallNode.h
        src/AST/CondExprNode.cpp
        src/AST/CondExprNode.h
        src/AST/IfNode.cpp
        src/AST/IfNode.h
        src/AST/ExprNode.cpp
        src/AST/ExprNode.h
        src/AST/ASTNode.h
        src/AST/VariableNode.cpp
        src/AST/VariableNode.h
        src/AST/ProgramNode.cpp
        src/AST/ProgramNode.h
        src/AST/AssignNode.cpp
        src/AST/AssignNode.h
        src/AST/ProcedureNode.cpp
        src/AST/ProcedureNode.h
        src/AST/StmtNode.h
        src/AST/utils/ASTUtils.cpp
        src/AST/utils/ASTUtils.h
        src/design_extractor/EntityExtractor.cpp
        src/design_extractor/EntityExtractor.h
        src/pkb/exception/KeyNotFoundException.cpp
        src/pkb/exception/KeyNotFoundException.h
        src/AST/StmtNode.h
        src/AST/utils/ASTUtils.cpp
        src/AST/utils/ASTUtils.h
        src/parser/ASTBuilder.cpp
        src/parser/ASTBuilder.h
        src/utils/Utils.cpp
        src/utils/Utils.h
        src/design_extractor/RelationExtractor.cpp
        src/design_extractor/RelationExtractor.h
        src/utils/ExprNodeParser.cpp
        src/utils/ExprNodeParser.h
        src/design_extractor/FollowsExtractor.cpp
        src/design_extractor/FollowsExtractor.h
        src/design_extractor/ParentExtractor.cpp
        src/design_extractor/ParentExtractor.h
        src/design_extractor/ModifiesExtractor.cpp
        src/design_extractor/ModifiesExtractor.h
        src/design_extractor/UsesExtractor.cpp
        src/design_extractor/UsesExtractor.h
        src/AST/RelExprNode.cpp
        src/AST/RelExprNode.h
        src/query_evaluator/QEUtils.cpp
        src/query_evaluator/QEUtils.h
        src/utils/ExprNodeParser.h
        src/AST/RelExprNode.cpp
        src/AST/RelExprNode.h
        src/utils/ExprNodeParser.h
        src/AST/RelExprNode.cpp
        src/AST/RelExprNode.h
        src/design_extractor/PatternExtractor.cpp
        src/design_extractor/PatternExtractor.h
        src/query_builder/clauses/pattern_clauses/PatternClause.h
        src/query_builder/commons/ExpressionSpec.cpp
        src/query_builder/commons/ExpressionSpec.h
        src/query_builder/commons/ExpressionSpecType.h
        src/pkb/table/PatternTable.cpp
        src/pkb/table/PatternTable.h
        src/query_builder/commons/ExpressionSpecType.h
        src/query_builder/commons/ExprStringTokenizer.cpp
        src/query_builder/commons/ExprStringTokenizer.h
        src/spa_manager/SPAManager.cpp
        src/spa_manager/SPAManager.h
        src/pkb/PKBStorage.cpp
        src/pkb/PKBStorage.h
        src/pkb/table/CallsTable.cpp
        src/pkb/table/CallsTable.h
        src/pkb/table/NextTable.cpp
        src/pkb/table/NextTable.h
        src/pkb/table/AffectsTable.cpp
        src/pkb/table/AffectsTable.h
        src/pkb/PKBStorage.h
        src/query_builder/commons/AttrRef.cpp
        src/query_builder/commons/AttrRef.h
        src/query_builder/clauses/with_clauses/WithClauses.cpp
        src/query_builder/clauses/with_clauses/WithClauses.h
        src/query_evaluator/QueryBooleanResult.cpp
        src/query_evaluator/QueryBooleanResult.h
        src/query_evaluator/QueryTupleResult.cpp
        src/query_evaluator/QueryTupleResult.h
        src/query_builder/commons/WithRef.cpp
        src/parser/constants/ParserConstants.cpp
        src/parser/constants/ParserConstants.h
        src/parser/constants/TokenizerConstants.cpp
        src/parser/constants/TokenizerConstants.h
        src/utils/ErrorMessageFormatter.cpp
        src/utils/ErrorMessageFormatter.h
        src/query_builder/constants/QueryTokeniserConstants.cpp
        src/query_builder/constants/QueryTokeniserConstants.h
        src/query_builder/constants/QueryParserConstants.cpp
        src/query_builder/constants/QueryParserConstants.h
        src/query_builder/commons/WithRef.h
        src/design_extractor/CallsExtractor.cpp
        src/design_extractor/CallsExtractor.h
        src/query_builder/commons/Underscore.cpp
        src/query_builder/constants/QueryValidatorConstants.cpp
        src/query_builder/constants/QueryValidatorConstants.h
        src/design_extractor/CallsExtractor.h
        src/query_builder/clauses/pattern_clauses/IfPatternClause.cpp
        src/query_builder/clauses/pattern_clauses/IfPatternClause.h
        src/query_builder/clauses/pattern_clauses/WhilePatternClause.cpp
        src/query_builder/clauses/pattern_clauses/WhilePatternClause.h
        src/query_builder/clauses/pattern_clauses/AssignPatternClause.cpp
        src/query_builder/clauses/pattern_clauses/AssignPatternClause.h
        src/query_builder/clauses/pattern_clauses/PatternClause.cpp
        src/query_evaluator/constants/ClauseVisitorConstants.cpp
        src/query_evaluator/constants/ClauseVisitorConstants.h
        src/query_evaluator/IVisitor.cpp
        src/query_evaluator/IVisitor.h
        src/query_builder/clauses/IVisitorHost.cpp
        src/query_builder/clauses/IVisitorHost.h
        src/query_builder/clauses/AbstractClause.cpp
        src/query_builder/clauses/AbstractClause.h
        src/query_evaluator/AbstractClauseVisitor.cpp
        src/query_evaluator/AbstractClauseVisitor.h
        src/query_evaluator/ConcreteClauseVisitor.cpp
        src/query_evaluator/ConcreteClauseVisitor.h
        src/query_builder/clauses/such_that_clauses/FollowsClause.cpp
        src/query_builder/clauses/such_that_clauses/FollowsClause.h
        src/query_builder/clauses/such_that_clauses/FollowsTClause.cpp
        src/query_builder/clauses/such_that_clauses/FollowsTClause.h
        src/query_builder/clauses/such_that_clauses/ParentClause.cpp
        src/query_builder/clauses/such_that_clauses/ParentClause.h
        src/query_builder/clauses/such_that_clauses/ParentTClause.cpp
        src/query_builder/clauses/such_that_clauses/ParentTClause.h
        src/query_builder/clauses/such_that_clauses/UsesSClause.cpp
        src/query_builder/clauses/such_that_clauses/UsesSClause.h
        src/query_builder/clauses/such_that_clauses/UsesPClause.cpp
        src/query_builder/clauses/such_that_clauses/UsesPClause.h
        src/query_builder/clauses/such_that_clauses/ModifiesSClause.cpp
        src/query_builder/clauses/such_that_clauses/ModifiesSClause.h
        src/query_builder/clauses/such_that_clauses/ModifiesPClause.cpp
        src/query_builder/clauses/such_that_clauses/ModifiesPClause.h
        src/query_builder/clauses/such_that_clauses/CallsClause.cpp
        src/query_builder/clauses/such_that_clauses/CallsClause.h
        src/query_builder/clauses/such_that_clauses/CallsTClause.cpp
        src/query_builder/clauses/such_that_clauses/CallsTClause.h
        src/query_builder/clauses/such_that_clauses/NextClause.cpp
        src/query_builder/clauses/such_that_clauses/NextClause.h
        src/query_builder/clauses/such_that_clauses/NextTClause.cpp
        src/query_builder/clauses/such_that_clauses/NextTClause.h
        src/query_builder/clauses/such_that_clauses/AffectsClause.cpp
        src/query_builder/clauses/such_that_clauses/AffectsClause.h
        src/query_builder/clauses/such_that_clauses/AffectsTClause.cpp
        src/query_builder/clauses/such_that_clauses/AffectsTClause.h
        src/query_builder/clauses/such_that_clauses/Validatable.h
        src/CFG/CFG.cpp
        src/CFG/CFG.h
        src/query_builder/relations/such_that_relations/Follows.cpp
        src/query_builder/relations/such_that_relations/Follows.h
        src/query_builder/relations/such_that_relations/SuchThatRelations.cpp
        src/query_builder/relations/such_that_relations/SuchThatRelations.h
        src/query_builder/relations/such_that_relations/PatternRelations.cpp
        src/query_builder/relations/such_that_relations/PatternRelations.h
        src/query_builder/relations/such_that_relations/FollowsT.cpp
        src/query_builder/relations/such_that_relations/FollowsT.h
        src/query_builder/relations/such_that_relations/Parent.cpp
        src/query_builder/relations/such_that_relations/Parent.h
        src/query_builder/relations/such_that_relations/ParentT.cpp
        src/query_builder/relations/such_that_relations/ParentT.h
        src/query_builder/relations/such_that_relations/UsesS.cpp
        src/query_builder/relations/such_that_relations/UsesS.h
        src/query_builder/relations/such_that_relations/UsesP.cpp
        src/query_builder/relations/such_that_relations/UsesP.h
        src/query_builder/relations/such_that_relations/ModifiesS.cpp
        src/query_builder/relations/such_that_relations/ModifiesS.h
        src/query_builder/relations/such_that_relations/ModifiesP.cpp
        src/query_builder/relations/such_that_relations/ModifiesP.h
        src/query_builder/relations/such_that_relations/Calls.cpp
        src/query_builder/relations/such_that_relations/Calls.h
        src/query_builder/relations/such_that_relations/CallsT.cpp
        src/query_builder/relations/such_that_relations/CallsT.h
        src/query_builder/relations/such_that_relations/Next.cpp
        src/query_builder/relations/such_that_relations/Next.h
        src/query_builder/relations/such_that_relations/NextT.cpp
        src/query_builder/relations/such_that_relations/NextT.h
        src/query_builder/relations/such_that_relations/Affects.cpp
        src/query_builder/relations/such_that_relations/Affects.h
        src/query_builder/relations/such_that_relations/AffectsT.cpp
        src/query_builder/relations/such_that_relations/AffectsT.h
        src/query_builder/relations/such_that_relations/Uses.cpp
        src/query_builder/relations/such_that_relations/Uses.h
        src/query_builder/relations/such_that_relations/Modifies.cpp
        src/query_builder/relations/such_that_relations/Modifies.h
        src/query_builder/relations/pattern_relations/IfPattern.cpp
        src/query_builder/relations/pattern_relations/IfPattern.h
        src/query_builder/relations/pattern_relations/WhilePattern.cpp
        src/query_builder/relations/pattern_relations/WhilePattern.h
        src/query_builder/relations/pattern_relations/AssignPattern.cpp
        src/query_builder/relations/pattern_relations/AssignPattern.h
        src/query_builder/relations/pattern_relations/PatternRelations.cpp
        src/query_builder/relations/pattern_relations/PatternRelations.h
        src/parser/ASTValidator.cpp
        src/parser/ASTValidator.h
        src/query_builder/relations/pattern_relations/PatternRelations.h
        src/query_builder/clauses/pattern_clauses/InvalidPatternClause.cpp
        src/query_builder/clauses/pattern_clauses/InvalidPatternClause.h
        src/query_builder/relations/pattern_relations/InvalidPattern.cpp
        src/query_builder/relations/pattern_relations/InvalidPattern.h src/query_evaluator/QueryOptimizer.cpp src/query_evaluator/QueryOptimizer.h src/query_builder/clauses/ConditionalClause.cpp src/query_builder/clauses/ConditionalClause.h src/design_extractor/args/StmtNoArgs.cpp src/design_extractor/args/StmtNoArgs.h src/design_extractor/NextExtractor.cpp src/design_extractor/NextExtractor.h src/design_extractor/AffectsExtractor.cpp src/design_extractor/AffectsExtractor.h src/parser/constants/ValidatorConstants.cpp src/parser/constants/ValidatorConstants.h)






# this makes the headers accessible for other projects which uses spa lib
target_include_directories(spa PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)


